[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agent-bus"
version = "0.1.0"
description = "MCP server that lets parallel Claude agents signal completion and wait for each other"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["mcp>=1.0"]

[project.scripts]
agent-bus = "server:main"

[tool.setuptools]
py-modules = ["server"]
