[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agent2agent"
version = "0.1.0"
description = "Decentralized agent-to-agent communication — publish results, wait for peers, no broker required"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["mcp>=1.0"]

[project.scripts]
agent2agent = "server:main"

[tool.setuptools]
py-modules = ["server"]
