[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent2agent"
version = "0.2.0"
description = "Decentralized agent-to-agent communication — publish results, wait for peers, no broker required"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["mcp>=1.0"]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]

[project.scripts]
agent2agent = "server:main"

[tool.setuptools]
py-modules = ["server"]
